--- a/..md
+++ b/..md
@@ -875,3 +875,4 @@ sized chunks for simplicity and efficiency. However, in practice, it can also be
 beneficial to train an LLM with variable-length inputs to help the LLM to bet-
 ter generalize across different types of inputs when it is being used. Which means that batch sizes may vary in production grade llms
 
+## 5.2 Training an LLM
