--- a/src/chp05.ipynb
+++ b/src/chp05.ipynb
@@ -820,6 +820,94 @@
     "print(\"Training loss:\", train_loss)\n",
     "print(\"Validation loss:\", val_loss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "23ef293a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model_simple(model, train_loader, val_loader,  optimizer, device, num_epochs, eval_freq, eval_iter, start_context, tokenizer):\n",
+    "    train_losses, val_losses, track_tokens_seen = [], [], []\n",
+    "    tokens_seen, global_step = 0, -1\n",
+    "    \n",
+    "    for epoch in range(num_epochs):\n",
+    "        model.train()\n",
+    "        for input_batch, target_batch in train_loader:\n",
+    "            optimizer.zero_grad()\n",
+    "            loss = calc_loss_batch (\n",
+    "                input_batch, target_batch, model, device\n",
+    "            )\n",
+    "            \n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            tokens_seen += input_batch.nume1()\n",
+    "            global_step += 1\n",
+    "            \n",
+    "            if global_step % eval_freq == o:\n",
+    "                train_loss, val_loss = evaluate_model(\n",
+    "                    model, train_loader, val_loader, device, eval_iter\n",
+    "                )\n",
+    "                train_losses.append(train_loss)\n",
+    "                val_loss.append(val_loss)\n",
+    "                track_tokens_seen.append(tokens_seen)\n",
+    "                print(f\"Ep {epoch+1} (Step {global_step:06d}): \"\n",
+    "                      f\"Train loss {train_loss:.3f}\"\n",
+    "                      f\"Val loss {val_loss:.3f}\"\n",
+    "                )\n",
+    "                \n",
+    "        generate_and_print_sample(\n",
+    "            model, tokenizer, device, start_context\n",
+    "        )\n",
+    "    \n",
+    "    return train_losses, val_losses, track_tokens_seen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9778753e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(model, train_loader, val_loader, device, eval_iter):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        train_loss = calc_loss_loader(\n",
+    "            train_loader, model, device, num_batches=eval_iter\n",
+    "        )\n",
+    "        val_loss = calc_loss_loader(\n",
+    "            val_loader, model, device, num_batches=eval_iter\n",
+    "        )\n",
+    "    \n",
+    "    model.train()\n",
+    "    return train_loss, val_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "510827d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_and_print_sample(model, tokenizer, device, start_context):\n",
+    "    model.eval()\n",
+    "    context_size = model.pos_emb.weight.shape[0]\n",
+    "    encoded = text_to_token_ids(start_context, tokenizer).to(device)\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        token_ids = generate_text_simple(\n",
+    "            model=model, idx=encoded,\n",
+    "            max_new_tokens=50, context_size=context_size\n",
+    "        )\n",
+    "    \n",
+    "    decoded_text = token_ids_to_text(token_ids, tokenizer)\n",
+    "    print(decoded_text.replace(\"\\n\", \" \"))\n",
+    "    model.train()\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
