--- a/..md
+++ b/..md
@@ -876,3 +876,14 @@ beneficial to train an LLM with variable-length inputs to help the LLM to bet-
 ter generalize across different types of inputs when it is being used. Which means that batch sizes may vary in production grade llms
 
 ## 5.2 Training an LLM
+One epoch means that the model has processed every training example once (input -> forward pass -> output -> loss -> backprop -> parameter update)
+if say your batch size is 4, and you've got 3 batches;
+1 epoch = 3 iterations (equal to number of batches)
+
+After training the model, you'll notice that training losses decrease continually however validation losses don't decrease much after the 2nd epoch - this indicates that the model is overfitted to the training data or more like 'memorization':
+![Fig 5.12](md-assetsimage17.png)
+
+This is to be expected since this is fairly a very small training dataset and on multiple epoch however usually it's common to train a large dataset on one epoch only 
+
+
+--> can train a much better model by using books from project gutenberg (Appendix B)
