--- a/..md
+++ b/..md
@@ -887,3 +887,10 @@ This is to be expected since this is fairly a very small training dataset and on
 
 
 --> can train a much better model by using books from project gutenberg (Appendix B)
+
+## 5.3 Decoding strategies to control randomness
+We'll be updating `generate_text_simple` function that was used inside of `generate_and_print_sample`. Then enter two techniques temperature scaling and top k sampling to improve this function
+
+### 5.3.1 Temperature scaling
+So far the next token generated would have had the highest probability distribution of ocurrence and the token output would remain the same no matter how many times you run the model wth the input "Every effort moves you forward", you will get back the same in return. This was done using torch.argmax, also known as greedy decoding
+To improve this, 
