--- a/src/chp05.ipynb
+++ b/src/chp05.ipynb
@@ -21,9 +21,9 @@
      "text": [
       "encoded:  [15496, 11, 314, 716]\n",
       "encoded_tensor.shape:  torch.Size([1, 4])\n",
-      "Output: tensor([[15496,    11,   314,   716,  2350,  6007, 43633, 49545, 34250,  1414]])\n",
+      "Output: tensor([[15496,    11,   314,   716, 38492, 43455, 11629, 17215, 36254, 45641]])\n",
       "Output length: 10\n",
-      "Hello, I amique capableCU 1889 improperly pay\n"
+      "Hello, I am LW stressing iterovic surfing Xiang\n"
      ]
     },
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "8c505f04",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "587558ec",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "09b5c636",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "248319e1",
    "metadata": {},
    "outputs": [
@@ -380,13 +380,13 @@
      "output_type": "stream",
      "text": [
       "Token IDs:\n",
-      " tensor([[[13648],\n",
-      "         [10863],\n",
-      "         [38509]],\n",
+      " tensor([[[16835],\n",
+      "         [44376],\n",
+      "         [44148]],\n",
       "\n",
-      "        [[47485],\n",
-      "         [28548],\n",
-      "         [47847]]])\n"
+      "        [[16657],\n",
+      "         [ 1641],\n",
+      "         [40930]]])\n"
      ]
     }
    ],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "47a981cb",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
      "output_type": "stream",
      "text": [
       "Targets batch 1:  effort moves you\n",
-      "Outputs batch 1:  assists GRBruce\n"
+      "Outputs batch 1:  Train inactionProxy\n"
      ]
     }
    ],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "99ab0aa9",
    "metadata": {},
    "outputs": [
@@ -425,8 +425,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text 1:  tensor([2.4433e-05, 1.2515e-05, 1.1026e-05])\n",
-      "Text 2: tensor([1.7163e-05, 2.7705e-05, 6.6546e-06])\n"
+      "Text 1:  tensor([3.5706e-05, 1.5782e-05, 8.1219e-06])\n",
+      "Text 2: tensor([1.2870e-05, 3.2012e-05, 6.1263e-06])\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "23d2d5fc",
    "metadata": {
     "vscode": {
@@ -454,7 +454,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-10.6196, -11.2886, -11.4153, -10.9727, -10.4939, -11.9202])\n"
+      "tensor([-10.2402, -11.0567, -11.7209, -11.2606, -10.3494, -12.0029])\n"
      ]
     }
    ],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "86f1772c",
    "metadata": {
     "vscode": {
@@ -478,7 +478,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average log probas:  tensor(-11.1184)\n"
+      "Average log probas:  tensor(-11.1051)\n"
      ]
     }
    ],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "fd8016c4",
    "metadata": {
     "vscode": {
@@ -501,7 +501,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(11.1184)\n"
+      "tensor(11.1051)\n"
      ]
     }
    ],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "ccf03997",
    "metadata": {
     "vscode": {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "626fb135",
    "metadata": {
     "vscode": {
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "8a452a0b",
    "metadata": {
     "vscode": {
@@ -574,8 +574,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(11.1184)\n",
-      "tensor(67398.6719)\n"
+      "tensor(11.1051)\n",
+      "tensor(66510.8672)\n"
      ]
     }
    ],
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "95133e54",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "7ff5bd7a",
    "metadata": {},
    "outputs": [],
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "80164306",
    "metadata": {},
    "outputs": [],
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "id": "652b59ba",
    "metadata": {},
    "outputs": [],
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "e87b1e28",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "ca374660",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "dcff2fb6",
    "metadata": {},
    "outputs": [
@@ -803,8 +803,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 5.60612350040012\n",
-      "Validation loss: 6.517164707183838\n"
+      "Training loss: 10.987583584255642\n",
+      "Validation loss: 10.98110580444336\n"
      ]
     }
    ],
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "id": "23ef293a",
    "metadata": {},
    "outputs": [],
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "id": "70bcb567",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "id": "a4cbb0ca",
    "metadata": {},
    "outputs": [
@@ -995,11 +995,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "c1840143",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output text: \n",
+      " Every effort moves you know,\" was one of the axioms he laid down across the Sevres and silver of an exquisitely appointed lun\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.to(\"cpu\")\n",
+    "model.eval()\n",
+    "\n",
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "token_ids = generate_text_simple(\n",
+    "    model=model,\n",
+    "    idx=text_to_token_ids(\"Every effort moves you\", tokenizer),\n",
+    "    max_new_tokens=25,\n",
+    "    context_size=GPT_CONFIG_124M[\"context_length\"]\n",
+    ")\n",
+    "print(\"Output text: \\n\", token_ids_to_text(token_ids, tokenizer))"
+   ]
   }
  ],
  "metadata": {
