--- a/..md
+++ b/..md
@@ -893,4 +893,15 @@ We'll be updating `generate_text_simple` function that was used inside of `gener
 
 ### 5.3.1 Temperature scaling
 So far the next token generated would have had the highest probability distribution of ocurrence and the token output would remain the same no matter how many times you run the model wth the input "Every effort moves you forward", you will get back the same in return. This was done using torch.argmax, also known as greedy decoding
-To improve this, 
+To improve this, you will start off by replacing argmax with multinomial function in pytorch - it will still follow probabilities to some extent like 582 times out 1000 times it will still output the most used token but sometimes it mmight come up with something new or not likely to show up with argmax function
+The LLM would sometimes generate texts such as every effort moves you toward, every effort moves you inches, and every effort moves you closer instead of every effort moves you forward.
+
+Temperatures greater than 1 result in more uniformly distributed token probabilities, and temperatures smaller than 1 will result in more confident (sharper or more peaky) distributions.
+
+### 5.3.2 Top-k sampling
+Even though temperature scaling helps you generate words that are not occurring very often, it's a pretty good chance that by increasing temperature, you end up nonsensical or grammatically incorrect outputs such as `every effort moves you pizza` or something of the sort. 
+
+Top k sampling helps reduce that prblem by limiting sampled tokens to the top-k most likely tokens and exclude all other tokens from the selection process by masking their probability scores
+
+
+![Figure 5.15](md-assets/image18.png)
