--- a/..md
+++ b/..md
@@ -906,3 +906,13 @@ Top k sampling helps reduce that prblem by limiting sampled tokens to the top-k 
 
 ![Figure 5.15](md-assets/image18.png)
 
+### 5.3.3 Modifying the text generation function
+You then rewrite the whole text generation thing to include top k smapling in it as well. See pg#157
+
+
+## 5.4 Loading and saving model weights in PyTorch
+Instead of re-running code to train the model, you just save it using pytorch
+```python
+torch.save(model.state_dict(), "model.pth")
+```
+
