--- a/..md
+++ b/..md
@@ -916,3 +916,6 @@ Instead of re-running code to train the model, you just save it using pytorch
 torch.save(model.state_dict(), "model.pth")
 ```
 
+## 5.5 
+Loaded pretrained weights from openai's gpt2
+pg#160
