--- a/src/chp05.ipynb
+++ b/src/chp05.ipynb
@@ -1181,6 +1181,175 @@
     "\n",
     "# and then finally softmax to turn these into normalized probabilities"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3d3170b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from gpt_download import download_and_load_gpt2\n",
+    "settings, params = download_and_load_gpt2(\n",
+    "    model_size=\"124M\", models_dir=\"gpt2\"\n",
+    ")\n",
+    "\n",
+    "print(\"Settings\", settings)\n",
+    "print(\"Parameter dictionary keys\", params.keys())\n",
+    "\n",
+    "print(params[\"wte\"])\n",
+    "print(\"Token embedding weight tensor dimensions: \", params[\"wte\"].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59ae0573",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_configs = {\n",
+    "\"gpt2-small (124M)\": {\"emb_dim\": 768, \"n_layers\": 12, \"n_heads\": 12},\n",
+    "\"gpt2-medium (355M)\": {\"emb_dim\": 1024, \"n_layers\": 24, \"n_heads\": 16},\n",
+    "\"gpt2-large (774M)\": {\"emb_dim\": 1280, \"n_layers\": 36, \"n_heads\": 20},\n",
+    "\"gpt2-xl (1558M)\": {\"emb_dim\": 1600, \"n_layers\": 48, \"n_heads\": 25},\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0e133532",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'GPT_CONFIG_124M' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m model_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt2-small (124M)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m NEW_CONFIG \u001b[38;5;241m=\u001b[39m \u001b[43mGPT_CONFIG_124M\u001b[49m\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m      3\u001b[0m NEW_CONFIG\u001b[38;5;241m.\u001b[39mupdate(model_configs[model_name])\n\u001b[1;32m      4\u001b[0m NEW_CONFIG\u001b[38;5;241m.\u001b[39mupdate({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontext_length\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;241m1024\u001b[39m})\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'GPT_CONFIG_124M' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = \"gpt2-small (124M)\"\n",
+    "NEW_CONFIG = GPT_CONFIG_124M.copy()\n",
+    "NEW_CONFIG.update(model_configs[model_name])\n",
+    "NEW_CONFIG.update({\"context_length\":1024})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9387e948",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NEW_CONFIG.update({\"qkv_bias\": True})\n",
+    "\n",
+    "gpt = GPTModel(NEW_CONFIG)\n",
+    "gpt.eval()\n",
+    "\n",
+    "def assign(left, right):\n",
+    "    if left.shape != right.shape:\n",
+    "        raise ValueError(f\"Shape mismatch. Left: {left.shape}, \"\n",
+    "            \"Right: {right.shape}\"\n",
+    ")\n",
+    "    return torch.nn.Parameter(torch.tensor(right))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3adb640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def load_weights_into_gpt(gpt, params):\n",
+    "    gpt.pos_emb.weight = assign(gpt.pos_emb.weight, params['wpe'])\n",
+    "    gpt.tok_emb.weight = assign(gpt.tok_emb.weight, params['wte'])\n",
+    "    for b in range(len(params[\"blocks\"])):\n",
+    "        q_w, k_w, v_w = np.split(\n",
+    "            (params[\"blocks\"][b][\"attn\"][\"c_attn\"])[\"w\"], 3, axis=-1)\n",
+    "        gpt.trf_blocks[b].att.W_query.weight = assign(\n",
+    "            gpt.trf_blocks[b].att.W_query.weight, q_w.T)\n",
+    "        gpt.trf_blocks[b].att.W_key.weight = assign(\n",
+    "            gpt.trf_blocks[b].att.W_key.weight, k_w.T)\n",
+    "        gpt.trf_blocks[b].att.W_value.weight = assign(\n",
+    "            gpt.trf_blocks[b].att.W_value.weight, v_w.T)\n",
+    "        \n",
+    "    q_b, k_b, v_b = np.split(\n",
+    "        (params[\"blocks\"][b][\"attn\"][\"c_attn\"])[\"b\"], 3, axis=-1)\n",
+    "    gpt.trf_blocks[b].att.W_query.bias = assign(\n",
+    "        gpt.trf_blocks[b].att.W_query.bias, q_b)\n",
+    "    gpt.trf_blocks[b].att.W_key.bias = assign(\n",
+    "        gpt.trf_blocks[b].att.W_key.bias, k_b)\n",
+    "    gpt.trf_blocks[b].att.W_value.bias = assign(\n",
+    "        gpt.trf_blocks[b].att.W_value.bias, v_b)\n",
+    "    gpt.trf_blocks[b].att.out_proj.weight = assign(\n",
+    "        gpt.trf_blocks[b].att.out_proj.weight,\n",
+    "        params[\"blocks\"][b][\"attn\"][\"c_proj\"][\"w\"].T)\n",
+    "    \n",
+    "    gpt.trf_blocks[b].att.out_proj.bias = assign(\n",
+    "        gpt.trf_blocks[b].att.out_proj.bias,\n",
+    "        params[\"blocks\"][b][\"attn\"][\"c_proj\"][\"b\"])\n",
+    "    gpt.trf_blocks[b].ff.layers[0].weight = assign(\n",
+    "        gpt.trf_blocks[b].ff.layers[0].weight,\n",
+    "        params[\"blocks\"][b][\"mlp\"][\"c_fc\"][\"w\"].T)\n",
+    "    gpt.trf_blocks[b].ff.layers[0].bias = assign(\n",
+    "        gpt.trf_blocks[b].ff.layers[0].bias,\n",
+    "        params[\"blocks\"][b][\"mlp\"][\"c_fc\"][\"b\"])\n",
+    "    gpt.trf_blocks[b].ff.layers[2].weight = assign(\n",
+    "        gpt.trf_blocks[b].ff.layers[2].weight,\n",
+    "        params[\"blocks\"][b][\"mlp\"][\"c_proj\"][\"w\"].T)\n",
+    "    gpt.trf_blocks[b].ff.layers[2].bias = assign(\n",
+    "        gpt.trf_blocks[b].ff.layers[2].bias,\n",
+    "        params[\"blocks\"][b][\"mlp\"][\"c_proj\"][\"b\"])\n",
+    "    gpt.trf_blocks[b].norm1.scale = assign(\n",
+    "        gpt.trf_blocks[b].norm1.scale,\n",
+    "        params[\"blocks\"][b][\"ln_1\"][\"g\"])\n",
+    "    gpt.trf_blocks[b].norm1.shift = assign(\n",
+    "        gpt.trf_blocks[b].norm1.shift,\n",
+    "        params[\"blocks\"][b][\"ln_1\"][\"b\"])\n",
+    "    gpt.trf_blocks[b].norm2.scale = assign(\n",
+    "        gpt.trf_blocks[b].norm2.scale,\n",
+    "        params[\"blocks\"][b][\"ln_2\"][\"g\"])\n",
+    "    gpt.trf_blocks[b].norm2.shift = assign(\n",
+    "        gpt.trf_blocks[b].norm2.shift,\n",
+    "        params[\"blocks\"][b][\"ln_2\"][\"b\"])   \n",
+    "    \n",
+    "gpt.final_norm.scale = assign(gpt.final_norm.scale, params[\"g\"])\n",
+    "gpt.final_norm.shift = assign(gpt.final_norm.shift, params[\"b\"])\n",
+    "gpt.out_head.weight = assign(gpt.out_head.weight, params[\"wte\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f394d534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_weights_into_gpt(gpt, params)\n",
+    "gpt.to(device)\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "token_ids = generate(\n",
+    "model=gpt,\n",
+    "idx=text_to_token_ids(\"Every effort moves you\", tokenizer).to(device),\n",
+    "max_new_tokens=25,\n",
+    "context_size=NEW_CONFIG[\"context_length\"],\n",
+    "top_k=50,\n",
+    "temperature=1.5\n",
+    ")\n",
+    "print(\"Output text:\\n\", token_ids_to_text(token_ids, tokenizer))"
+   ]
   }
  ],
  "metadata": {
