--- a/..md
+++ b/..md
@@ -919,3 +919,7 @@ torch.save(model.state_dict(), "model.pth")
 ## 5.5 
 Loaded pretrained weights from openai's gpt2
 pg#160
+
+# Chapter 6 
+## 6.1 Different categories of fine-tuning
+Instruction fine-tuning improves a model’s ability to understand and generate responses based on specific user instructions. Instruction fine-tuning is best suited for models that need to handle a variety of tasks based on complex user instructions, improving flexibility and interaction quality. Classification fine-tuning is ideal for projects requiring precise categorization of data into predefined classes, such as sentiment analysis or spam detection. While instruction fine-tuning is more versatile, it demands larger datasets and greater computational resources to develop models proficient in various tasks. In contrast, classification fine-tuning requires less data and compute power, but its use is confined to the specific classes on which the model has been trained.
